Added batch search routes
